# GenAI-Architect

./: .gitignore
FunctionCalling/: data_models.py  main.py  processing.py  search_function.py
MailCleaner/: .gitignore  README.md
RAG_APP/Backend/: pyproject.toml
RAG_APP/Backend/src/: app.py  qdrant.py  rag.py
RAG_APP/Frontend/rag_app/: package.json
RAG_APP/Frontend/rag_app/src/: App.css  App.js  questionForm.js  uploadData.js
mailai/: README.md  pyproject.toml
mailai/src/mailai/: crew.py  main.py  models.py
mailai/src/mailai/config/: agents.yaml  tasks.yaml
mailai/src/mailai/tools/: email_age.py
mcpCS/: main.py  requirements.txt
mcpclientserver/: pyproject.toml
mcpclientserver/api/: main.py  mcp_client.py  mcp_server.py
mcpclientserver/api/utils/: logger.py
