[project]
name = "mailai"
version = "0.1.0"
description = "mailAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
mailai = "mailai.main:run"
run_crew = "mailai.main:run"
train = "mailai.main:train"
replay = "mailai.main:replay"
test = "mailai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
